# ocara

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  build.rs
ci/: README.md  regression.sh  start.sh  unittests.sh
docs/: EBNF.md  README.md  adding-builtins.md  adding-types.md  compilation-guide.md  diagnostics.md  workflow-compilation.md
docs/builtins/: Array.md  Convert.md  Date.md  DateTime.md  Directory.md  DotEnv.md  File.md  HTML.md  HTMLComponent.md  HTTPRequest.md  HTTPServer.md  IO.md  JSON.md  Map.md  Math.md  Mutex.md  MySQL.md  Regex.md  SQLite.md  String.md  System.md  Thread.md  Time.md  UnitTest.md  YAML.md
examples/: 01_variables.oc  02_functions.oc  03_builtins.oc  04_conditions.oc  05_switch.oc  06_match.oc  07_loops.oc  08_arrays.oc  09_maps.oc  10_classes.oc  11_interfaces.oc  12_inheritance.oc  13_instantiation.oc  14_static_access.oc  15_operators.oc  16_types.oc  17_import.oc  17_modules.oc  18_class_consts.oc  19_break_continue.oc  20_try_fail.oc  21_errors.oc  22_union_types.oc  23_static_method.oc  24_function_type.oc  24_function_types.oc  25_nameless.oc  26_modules.oc  27_type_narrowing.oc  28_enum.oc  29_async.oc  30_variadic.oc  31_default_params.oc  32_strict_operators.oc  README.md
runtime/: Cargo.toml
runtime/src/: date.rs  datetime.rs  directory.rs  dotenv.rs  exception.rs  file.rs  htmlcomponent.rs  http.rs  httprequest.rs  httpserver.rs  lib.rs  mutex.rs  mysql.rs  sqlite.rs  thread.rs  time.rs  typecheck.rs  yaml.rs
src/: ast.rs  diagnostic.rs  error.rs  lexer.rs  main.rs  parser.rs  token.rs
src/builtins/: io.rs  (+27 more)
(+288 files in other folders)
