[package]
name    = "ocara_runtime"
version = "0.1.0"
edition = "2024"

[lib]
name       = "ocara_runtime"
crate-type = ["staticlib"]

[dependencies]
ureq      = { version = "=2.7.1", features = ["tls"] }
url       = "=2.3.1"
idna      = "=0.3.0"
regex     = "=1.10.6"
tiny_http = "=0.12.0"
serde_json = "=1.0.132"
serde_yaml = "0.9"
rusqlite  = { version = "=0.29.0", features = ["bundled"] }
mysql     = "25.0"
once_cell = "1.20"
